--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>A whale of a greeting</title>
@@ -7,7 +6,7 @@
     <h1>hello, world</h1>
     <a href="about.html">About this project</a>
     <p>Call me "Ishmael."</p>
-<a href="https://www.flickr.com/photos/28883788@n04/10097824543">
+<a href="https://www.flickr.com/photos/28883788@N04/10097824543">
     <img src="images/breaching_whale.jpg">
 </a>
   </body>
